# TheLeadEdge

./: .env.example  .gitignore  CLAUDE.md  MASTER_BUILD_PLAN.md  alembic.ini  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: protect-files.sh
.claude/rules/: code-authority.md  git-conventions.md  (+3 more)
Docs/: MLS_API_Pitch_Yani.html  TheLeadEdge_HowItWorks.html  TheLeadEdge_Presentation.html  TheLeadEdge_Questionnaire.html  TheLeadEdge_Questions.md  TheLeadEdge_Vision.md  YaniVision_HowItWorks.html  YaniVision_Presentation.html  YaniVision_Questionnaire.html  YaniVision_Questions.md  YaniVision_Vision.md
Reports/: 2026-03-03_lead_pipeline_report.html  2026-03-03_lead_pipeline_report.md
Research/: Free_Data_Automation_Plan.md  Interim_Data_Playbook.md  MASTER_RESEARCH.md  NABOR_API_Access_Guide.md  automation_integrations.md  clerk_of_court_automation_research.md  competitive_analysis.md  creative_strategies.md  dashboard_examples.md  dashboard_frameworks.md  dashboard_ux_design.md  data_pipeline_architecture.md  lead_scoring_models.md  legal_compliance_framework.md  local_data_sources.md  mls_data_analysis.md  outreach_templates.md  phone_enrichment_skip_tracing.md  public_records_strategies.md  python_implementation.md  reso_api_integration.md  roi_metrics_framework.md
TeamLeadJournal/: 2026-03-02_thoughts.md  2026-03-05_thoughts.md  2026-03-06_thoughts.md
alembic/: env.py
config/: clerk_fields.yaml  feature_flags.yaml  google_alerts.yaml  market.yaml  mls_fields.yaml  pa_fields.yaml  scoring_weights.yaml
tests/: conftest.py  factories.py
(+132 files in other folders)
